[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=2]
[ext_resource path="res://offline_levels/general_scenes/pause.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.737255, 0.227451, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[node name="pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
pause_popup = NodePath("pause_popup")

[node name="pause_button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 100.0
rect_min_size = Vector2( 75, 75 )
custom_fonts/font = ExtResource( 2 )
text = "||"

[node name="pause_popup" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="pause_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 666, 375 )
color = Color( 0, 0, 0, 0.588235 )

[node name="main_popup" type="Panel" parent="pause_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = -187.5
margin_right = 333.0
margin_bottom = 187.5
rect_min_size = Vector2( 666, 375 )
custom_styles/panel = SubResource( 1 )

[node name="indicator" type="Label" parent="pause_popup/main_popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 50.0
margin_right = 350.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Game Paused"
align = 1
valign = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="pause_popup/main_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = 12.5
margin_right = 112.5
margin_bottom = 112.5
custom_constants/hseparation = 25
columns = 2

[node name="home" type="Button" parent="pause_popup/main_popup/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "HOME"

[node name="restart" type="Button" parent="pause_popup/main_popup/GridContainer"]
margin_left = 125.0
margin_right = 225.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "RESTART"

[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="pause_popup/main_popup/GridContainer/home" to="." method="_on_home_pressed"]
